Implement Cart and wishlist repo

--- a/ShipShop.API/appsettings.json
+++ b/ShipShop.API/appsettings.json
@@ -13,5 +13,13 @@
     "ValidAudience": "https://test:7062",
     "ValidIssuer": "https://test:7062",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderName": "Beauty Box",
+    "SenderEmail": "yasmeensaleh147@gmail.com",
+    "Username": "beautybox@gmail.com",
+    "Password": "muwfoqoozjxipyns"
   }
 }
