--- a/ShipShop.API/appsettings.json
+++ b/ShipShop.API/appsettings.json
@@ -16,10 +16,9 @@
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
-    "SmtpPort": 587,
-    "SenderName": "Beauty Box",
+    "Port": 587,
+    "SenderName": "BeautyBox",
     "SenderEmail": "yasmeensaleh147@gmail.com",
-    "Username": "beautybox@gmail.com",
-    "Password": "muwfoqoozjxipyns"
+    "Password": "mdxqgnlqnqkmzisi"
   }
 }
